lab1/Test/L1-A-12-25.output
Error Type A at Line 15
Error Type A at Line 20
Error Type A at Line 21
Error Type A at Line 33
Error Type A at Line 38
Error Type B at Line 48
Error Type B at Line 52
